--- a/styles/Featured.module.css
+++ b/styles/Featured.module.css
@@ -1,7 +1,6 @@
 .cardsGrid {
   display: flex;
   flex-direction: column;
-  gap: 1rem;
   margin-top: 2rem;
 }
 
@@ -12,16 +11,11 @@
     margin-top: 3rem;
   }
 }
-@media screen and (min-width: 1024px) {
-  .cardsGrid {
-    gap: 0;
-  }
-}
+
 @media screen and (min-width: 1200px) {
   .cardsGrid {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
-    gap: 1rem;
     max-width: 652px;
     margin: 0 auto;
     margin-top: 1.5rem;
