--- a/styles/SubNavigation.module.css
+++ b/styles/SubNavigation.module.css
@@ -23,8 +23,6 @@
 }
 .nav {
   display: none;
-  gap: 1rem;
-  font-weight: bold;
 }
 
 .menu {
@@ -69,8 +67,11 @@
   }
   .nav {
     display: flex;
-    gap: 1rem;
     font-weight: 800;
+  }
+
+  .nav a {
+    margin: 0 0.5rem;
   }
 
   .menu,
